--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   "dependencies": {
     "dotenv": "^5.0.1",
     "express": "^4.16.3",
-    "mongoose": "^5.0.10"
+    "mongoose": "^5.0.10",
+    "passport": "^0.4.0"
   },
   "devDependencies": {
     "chai": "^4.1.2",
