--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "dotenv": "^5.0.1",
     "express": "^4.16.3",
     "mongoose": "^5.0.10",
+    "morgan": "^1.9.0",
     "passport": "^0.4.0"
   },
   "devDependencies": {
