--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "author": "Ryan Dabler",
   "license": "LicenseRef-LICENSE",
   "dependencies": {
-    "bcrypt": "^1.0.3",
+    "bcryptjs": "^2.4.3",
     "dotenv": "^5.0.1",
     "express": "^4.16.3",
     "mongoose": "^5.0.10",
